# Synduce

./: .gitignore  .gitmodules  .ocamlformat  0-kick-the-tires.sh  0-list-benchmarks.sh  0-report-paper-results.sh  1-short-experiments.sh  1-short-timeout.sh  2-full-experiments.sh  Atropos.opam  AutoRec  AutoRec.opam  LICENSE  Makefile  README.md  README_EVALUATION.md  README_EVALUATION.txt  ReFunS  Synduce  Synduce.opam  alpine.Dockerfile  atropos  bench.csv  clean.sh  clean_data.sh  debian.Dockerfile  docs  dune  dune-project  kick_the_tires.sh  setup.sh  table1.sh  table2_full.sh  table2_partial.sh  table3_full.sh  table3_partial.sh
.github/workflows/: build.yml
benchmarks/: .gitignore  bench.csv  bench.txt  bench_laptop.txt  benchmarks_log_cav21.txt  commons.py  compile_for_editors.sh  configurations_set_search.py  data.py  definitions.py  generate_constraint_benchmarks_table.sh  generate_lifting_and_constraint_table.sh  mss_memo_sum_mps.ml  parsing.py  playground.ml  plot_c.py  report.py  report_constraint.py  report_nonclassic.py  results.csv  runner.py  table.txt  table1.py  table2.py  table3.py  table5.py  table6.py  table_cstr.txt  test.py  test_c.py  timeout_v.py
benchmarks/bst/: sumlgt.ml
benchmarks/combine/: mss_with_sum.ml  mts.ml  mts.pmrs  mts_and_mps.ml  mts_and_mps.pmrs  mts_and_mps_nosum.ml
benchmarks/compressed_list/: sum.ml
benchmarks/constraints/: bst.ml
benchmarks/count_between_example/: 1.ml  2.ml  3.ml  4.ml  5.ml
benchmarks/data/: old_report.py  sample_run.txt  table3.txt  table_baselines_comparison.txt
benchmarks/expressions/: max_subexpr_sum.ml  norm_arith.ml
benchmarks/failing/: is_bst.ml  long_lemma_synthesis.ml  long_lemma_synthesis_2.ml  memo_tree.ml  relim_bad_rec_use.ml
benchmarks/incomplete/: count_lt_partial.ml  count_lt_partial_2.ml  sum.ml  sum_part.ml
benchmarks/indexed_list/: position_polynomial.ml  position_polynomial_no_index.ml  search.ml  search_no_index.ml  sum_elts_lt_pos.ml  sum_elts_lt_pos_no_len.ml
benchmarks/issues/: bal_noimf.ml  lemma_synt_fail.ml
benchmarks/lifting/: bal_no.ml  mits_nosum.ml  mpsl.ml  mssl.ml
benchmarks/list/: ConsList.ml  alist_sum.ml  atoi.ml  atoi_no_fac.ml  average.ml  bal.ml  bal.pmrs  bal_no_minc.ml  block_ones_extremas.ml  bool_to_int_conversion.ml  count_peaks.pmrs  dropwhile.ml  first.ml  hamming.ml  hamming.pmrs  is_sorted.ml  issorted.pmrs  largest_diff_sorted_list_nohead.ml  last.ml  last.pmrs  len.ml  line_of_sight.ml  list.txt  lpeak.ml  max.ml  max_block_ones.ml  maxcount.ml  maxcount.pmrs  min.ml  mincount.ml  mincount.pmrs  minhom.pmrs  minmax.ml  mps.ml  mps_no_ensures.ml  mps_no_sum.ml  mps_no_sum_noe.ml  mpshom.pmrs  mpsphom.pmrs  mss.ml  (+27 more)
benchmarks/list_to_tree/: mls.ml  mls.pmrs  search.ml  search.pmrs  search_v2.ml  search_v3.ml  search_v3.pmrs  search_v4.ml  search_v4.pmrs
benchmarks/misc/: composed_unkwns.ml  count_between.ml  ensures.ml  simple_nnf.ml  unknowns_are_ids.ml
benchmarks/nested_lists/: mpss.ml  mtss.ml  mtss_no_ensures.ml  pyramid_intervals.ml
benchmarks/numbers/: int_nat_toint.ml  int_nat_twomul.ml  int_nat_twosum.ml  nat_even_unrealizable.ml
benchmarks/parse_examples/: simple.pmrs  sum.ml
benchmarks/ptree/: maxheads.pmrs  maxlast.pmrs  maxsum.pmrs  mul.ml  sum.ml  sum.pmrs
benchmarks/sort_list/: 2ndmin_lift.ml  2ndmin_lift_v2.ml  max.ml  min.ml  sndmax.ml  sndmax_v2.ml  sndmin.ml  sumgtz.ml
benchmarks/tailopt/: mps.ml  mps.pmrs  mps_no_sum.ml  (+4 more)
demos/: 00-max.sl  01-sum.ml  02-max.ml  Synduce
docs/: CNAME  index.html  index.md
inputs/: bench.csv  homlists.pmrs  listhom.pmrs  listhom2.pmrs  maxtree.pmrs  mintree.pmrs  parsing.pmrs  simple.pmrs  test.py
src/: .merlin  Automata.ml  Lib.ml  PMRScheme.ml  Trees.ml  Utils.ml  dune  index.mld
src/frontend/: CFront.ml  ErrorReports.ml  Front.ml  OcamlAstHelpers.ml  OcamlFront.ml  OcamlFront.mli  Parsers.ml  PmrsFront.ml  dune  pmrs_parser.mly
src/lang/: .merlin  Alpha.ml  Alpha.mli  Analysis.ml  Automata.ml  Context.ml  EProps.ml  Env.ml  Eval.ml  Eval.mli  Expression.ml  ExpressionSet.ml  Matching.ml  PMRS.ml  PMRS.mli  PMRScheme.ml  Program.ml  RType.ml  Reduce.ml  Reduce.mli  Rewriter.ml  Rewriter.mli  Skeleton.ml  SmtInterface.ml  SmtInterface.mli  SmtLogic.ml  Specifications.ml  Specifications.mli  SygusInterface.ml  SygusInterface.mli  Term.ml  TermSet.ml  TermSynthesis.ml  TermTypes.ml  Trees.ml  Tuples.ml  Tuples.mli  Variables.ml  Variables.mli  dune
test/: DafnyProofGeneration.ml  Generation.ml  TestLib.ml  TestLib2.ml  TestMulti.ml  TestRewriter.ml  TestSmt.ml  TestUtils.ml  dune  ex_synduce_sum.ml  generate_test.ml  generated.dfy  generated2.dfy  out.dfy  readlog.py  runtests.sh  sum_tree.ml
tests/: .merlin  ParseTest.ml  SolverTest.ml  dune  out.tex
(+2556 files in other folders)
